Sparql returns a ResultSet object now and has convenience accessors